move back to java 18 to keep tests passing